--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">MINI-CAP</string>
+    <string name="session_activity">Session Activity</string>
+    <string name="session_status_not_started">Currently no session started</string>
+    <string name="session_status_started_no_number_user">Current session of</string>
+    <string name="start_session_text">Start session</string>
+    <string name="end_session_text">End session</string>
+    <string name="add_user_text">Add User</string>
+    <string name="edit_user_text">Edit User</string>
 </resources>
