--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
     <string name="app_name">MINI-CAP</string>
+
+    <!--General purpose Strings-->
+    <string name="confirmBTN">Confirm</string>
+    <string name="cancelBTN">Cancel</string>
+
+    <!--Below this line you will find all the Strings related to the SessionActivity-->
     <string name="session_activity">Session Activity</string>
     <string name="session_status_not_started">Currently no session started</string>
     <string name="session_status_started_no_number_user">Current session of</string>
@@ -7,4 +13,19 @@
     <string name="end_session_text">End session</string>
     <string name="add_user_text">Add User</string>
     <string name="edit_user_text">Edit User</string>
+
+
+    <!--Below this line you will find all the Strings related to the AddPresetFragment-->
+    <string name="add_preset_fragment">Create a Preset</string>
+    <string name="preset_name_hint">Preset name</string>
+    <string name="preset_age_hint">Your age</string>
+    <string-array name="skinTone_set">
+        <item>Light, pale white</item>
+        <item>White, fair</item>
+        <item>Medium white to light brown</item>
+        <item>Olive, moderate brown</item>
+        <item>Brown, dark brown</item>
+        <item>Very dark brown to black</item>
+    </string-array>
+
 </resources>
