--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <!--General purpose Strings-->
     <string name="confirmBTN">Confirm</string>
     <string name="cancelBTN">Cancel</string>
+    <string name="editBTN">Edit</string>
+    <string name="backBTN">Back</string>
 
     <!--Below this line you will find all the Strings related to the SessionActivity-->
     <string name="session_activity">Session Activity</string>
@@ -11,11 +13,11 @@
     <string name="session_status_started_no_number_user">Current session of</string>
     <string name="start_session_text">Start session</string>
     <string name="end_session_text">End session</string>
-    <string name="add_user_text">Add User</string>
-    <string name="edit_user_text">Edit User</string>
+    <string name="add_user_text">Add Preset</string>
+    <string name="edit_user_text">Edit Preset</string>
+    <string name="select_preset_title">Select a preset</string>
 
-
-    <!--Below this line you will find all the Strings related to the AddPresetFragment-->
+    <!--Below this line you will find all the Strings related to the PresetFragment-->
     <string name="add_preset_fragment">Create a Preset</string>
     <string name="preset_name_hint">Preset name</string>
     <string name="preset_age_hint">Your age</string>
@@ -27,5 +29,8 @@
         <item>Brown, dark brown</item>
         <item>Very dark brown to black</item>
     </string-array>
+
+    <!--Below this line you will find all the strings related to the EditActivity-->
+    <string name="edit_activity_header">Select a preset to edit</string>
 
 </resources>
