--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,22 +2,32 @@
     <string name="app_name">MINI-CAP</string>
 
     <!--General purpose Strings-->
+    <string name="backBTN">Back</string>
     <string name="confirmBTN">Confirm</string>
     <string name="cancelBTN">Cancel</string>
     <string name="editBTN">Edit</string>
-    <string name="backBTN">Back</string>
     <string name="deleteBTN">Delete</string>
+    <string name="saveBTN">Save</string>
 
     <!--Below this line you will find all the Strings related to the SessionActivity-->
     <string name="session_activity">Session Activity</string>
     <string name="session_status_not_started">Currently no session started</string>
-    <string name="session_status_started_no_number_preset">Current session of</string>
+    <string name="session_status_started">Current session with preset:</string>
+    <string name="notification_tier">Current notification tier:</string>
     <string name="start_session_text">Start session</string>
     <string name="end_session_text">End session</string>
+    <string name="pause_session_text">Pause session</string>
+    <string name="continue_session_text">Continue session</string>
+    <string name="time_remaining">Time remaining in current tier:</string>
 
-    <string name="add_user_text">Add User</string>
-    <string name="edit_user_text">Edit User</string>
+    <string name="add_preset_text">Add Preset</string>
+    <string name="edit_preset_text">Edit Preset</string>
+    <string name="select_preset_title">Select a preset</string>
 
+    <string name="default_clock">00:00</string>
+
+
+    <!--Below this line you will find all the strings related to device connection-->
     <string name="sensor_bluetooth_exception">Bluetooth is off or unsupported.</string>
     <string name="sensor_scan_start">Scanning for sensor..</string>
     <string name="sensor_scan_timeout">No sensor found.</string>
@@ -29,12 +39,9 @@
     <string name="sensor_connection_failed_noretry">Connection lost. Incompatible hardware?</string>
     <string name="sensor_record_format">Current UV Index: %1$.1f. Illuminance: %2$.1flux.</string>
 
-    <string name="add_preset_text">Add Preset</string>
-    <string name="edit_preset_text">Edit Preset</string>
-    <string name="select_preset_title">Select a preset</string>
-
     <!--Below this line you will find all the Strings related to the PresetFragment-->
-    <string name="add_preset_fragment">Create a Preset</string>
+    <string name="create_preset">Create a Preset</string>
+    <string name="edit_preset">Edit a Preset</string>
     <string name="preset_name_hint">Preset name</string>
     <string name="preset_age_hint">Your age</string>
     <string-array name="skinTone_set">
