--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
 
     <!--Below this line you will find all the strings related to device connection-->
     <string name="sensor_bluetooth_exception">Bluetooth is off or unsupported.</string>
+    <string name="sensor_bluetooth_permission_request">Please try again after allowing permissions.</string>
     <string name="sensor_scan_start">Scanning for sensor..</string>
     <string name="sensor_scan_timeout">No sensor found.</string>
     <string name="sensor_connection_initiated">Connecting to %1$s..</string>
@@ -37,6 +38,7 @@
     <string name="sensor_connection_disconnected">Disconnected.</string>
     <string name="sensor_connection_failed_retry">Connection lost. Please retry.</string>
     <string name="sensor_connection_failed_noretry">Connection lost. Incompatible hardware?</string>
+    <string name="sensor_sync_progress">Data sync in progress.. %1$d%%</string>
     <string name="sensor_record_format">Current UV Index: %1$.1f. Illuminance: %2$.1flux.</string>
 
     <!--Below this line you will find all the Strings related to the PresetFragment-->
