Fixed a bug when entering invalid city names, added refresh functionality, added app title to main activity, added app and notif icons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MINI-CAP</string>
+    <string name="app_name">Sun-Buddy</string>
 
     <!--General purpose Strings-->
     <string name="backBTN">Back</string>
