--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,5 +71,7 @@
     <string name="sensor_battery_charging">Charging, %d%%</string>
     <string name="sensor_battery_charged">Fully charged.</string>
 
+    <string name="sensor_settings_busy">App busy, please wait..</string>
+
 
 </resources>
